--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,9 @@
 
-<app-navbar></app-navbar>
+
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <router-outlet></router-outlet>
-
+      <h1>Hello.. Home!!</h1>
     </div>
   </div>
 </div>
-
